# learn-you-ocaml

./: .envrc  .gitignore  .ocamlformat  README.md  dune-project  learn_you_ocaml.opam  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
lib/: dune  text.ml
test/: dune
